Changes to BC and behavior in version 5.4
=========================================

INI setting changes
-------------------


Change of behavior
------------------

- EZP-23296: Template Block Cache has cache key collisions

  The template cache blocks where using crc32 which has a high probability of collisions.
  Feature has been changed to use md5 like viewcache already uses.

  Note: To avoid that you have to many cache blocks take advantage of putting identical once in
  own template so they will share cache (template and location of block is part of internal unique key).


Removed features
----------------

- EZP-23082: completely remove ezsearch_return_count table

  The table ezsearch_return_count is not used by eZ Publish anymore, so simply remove it.
  This drastically decreases the size of the database for huge sites.


Removed constants
-----------------



Removed globals
---------------



Deprecated
----------


