@@ -27,6 +27,8 @@ class eZUser extends eZPersistentObject
     const PASSWORD_HASH_MYSQL = 4;
     /// Passwords in plaintext, should not be used for real sites
     const PASSWORD_HASH_PLAINTEXT = 5;
+    /// Passwords in bcrypt of password
+    const PASSWORD_BCRYPT = 6;
 
     /**
      * Max length allowed for a login or a password
@@ -135,6 +137,10 @@ class eZUser extends eZPersistentObject
             {
                 return 'plaintext';
             } break;
+            case self::PASSWORD_BCRYPT:
+            {
+                return 'bcrypt';
+            } break;
         }
     }
 
@@ -165,6 +171,10 @@ class eZUser extends eZPersistentObject
             case 'plaintext':
             {
                 return self::PASSWORD_HASH_PLAINTEXT;
+            } break;
+            case 'bcrypt':
+            {
+                return self::PASSWORD_BCRYPT;
             } break;
         }
     }
@@ -611,6 +621,8 @@ WHERE user_id = '" . $userID . "' AND
             return self::PASSWORD_HASH_MD5_USER;
         else if ( $type == 'plaintext' )
             return self::PASSWORD_HASH_PLAINTEXT;
+        else if ( $type == 'bcrypt' )
+            return self::PASSWORD_BCRYPT;
         else
             return self::PASSWORD_HASH_MD5_PASSWORD;
     }
@@ -1802,6 +1814,19 @@ WHERE user_id = '" . $userID . "' AND
         }
         else if ( $type == self::PASSWORD_HASH_PLAINTEXT )
         {
+            $str = $password;
+        }
+        else if ( $type == self::PASSWORD_BCRYPT )
+        {
+            if ( $hash ) {
+                if ( password_verify( $password, $hash ) ) {
+                    return $hash;
+                } else {
+                    return false;
+                }
+            } else {
+                $str = password_hash( $password, PASSWORD_BCRYPT );
+            }
             $str = $password;
         }
         else // self::PASSWORD_HASH_MD5_PASSWORD
